# bochan

./: AGENTS.md  README.md  pyproject.toml
docs/theory/: 00_overview.md  01_gaussian_process_models.md  02_bayesian_optimization.md  03_acquisition_functions.md  04_active_learning.md  README.md  (+5 more)
notebooks/: moon_toy_objectives.py  prediction_plot_utils.py
patches/: hetero_multi_output_baseline_shape_fix.patch  ordinal_active_learning_ohe_reference_transform_fix.patch
tests/: _binary_classification_multi_output_variant_utils.py  test_001.py  test_binary_classification_base_multi_output.py  test_binary_classification_base_multi_output_jupyter_checks.py  test_binary_classification_deep_multi_output.py  test_binary_classification_deepgp_multi_output.py  test_binary_classification_deepgp_single_output.py  test_binary_classification_deepkernel_multi_output.py  test_binary_classification_deepkernel_single_output.py  test_binary_classification_hetero_multi_output.py  test_binary_classification_hetero_single_output.py  test_binary_classification_pca_rembo_multi_output.py  test_binary_classification_pca_rembo_single_output.py  test_binary_classification_rrp_multi_output.py  test_binary_classification_rrp_single_output.py  test_binary_classification_saas_multi_output.py  test_binary_classification_saas_single_output.py  test_multitask_classification_ordinal_models.py  test_ordinal_base_single_output.py  test_ordinal_deepgp_single_output.py  test_ordinal_deepkernel_single_output.py  test_ordinal_saas_single_output.py  test_ordinal_saas_validation.py  test_tmp_probe.py
(+282 files in other folders)
